--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
+    "firebase": "^9.16.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -46,6 +47,7 @@
     "react-icons": "^4.7.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.7.0",
+    "react-toastify": "^9.1.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
